day1: i totally missed the 2nd part last night

--- a/day1/build.gradle
+++ b/day1/build.gradle
@@ -13,5 +13,11 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.jetbrains.kotlin:kotlin-test-junit:1.0.5-2'
+}
+
 mainClassName = 'SolutionKt'
 run.standardInput = System.in
+test.testLogging.events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
