--- a/day1/build.gradle
+++ b/day1/build.gradle
@@ -20,4 +20,7 @@ dependencies {
 
 mainClassName = 'SolutionKt'
 run.standardInput = System.in
-test.testLogging.events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+test.testLogging {
+    events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+    exceptionFormat 'full'
+}
